# codebeacon

./: .gitignore  .mcp.json  1  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.claude/: settings.json
.claude/hooks/: codebeacon-security.sh
.cursor/: hooks.json.example  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  suggestion.md
.github/workflows/: release.yml
assets/cursor/: codebeacon.mdc
assets/hooks/: claude-discovery-hook.json  claude-settings.security.example.json  codebeacon-context.sh  codebeacon-security.sh  cursor-hooks.json.example
assets/skill/: SKILL.md
assets/skill/references/: loop.md  mcp-tools.md  security.md
docs/: BENCHMARKS.md  CONFIG.md  INSTALL.md  LOCKS.md  LOOP.md  ROADMAP.md  SECURITY_EDIT_PATHS.md  TEAM.md  opencode-security.example.jsonc
packaging/npm/: test-exit-forward.js  test-onboard.js
packaging/npm/lib/: onboard.js
src/: config.rs  config_file.rs  extractor.rs  imports.rs  lib.rs  main.rs  types.rs  verify_cmd.rs
src/compact/: decode.rs  dict.rs  encode.rs  mod.rs  schema.rs  usage.rs
src/daemon/: mod.rs  watcher.rs
src/docs/: anchor.rs  brief.rs  index.rs  mod.rs
src/export/: mermaid.rs
src/extract/: mod.rs  regex.rs
src/extract/tree_sitter/: csharp.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/graph/: bfs.rs  mod.rs  path.rs  persistence.rs
src/hook/: mod.rs
src/indexer/: mod.rs  package.rs  writer.rs
src/install/: markers.rs  mod.rs  platforms.rs
src/intelligence/: api.rs  conventions.rs  focus.rs  fragile.rs  git.rs  impact.rs  mod.rs  similar.rs  status.rs  task.rs
src/locks/: mod.rs  shared.rs  store.rs
src/loop_coord/: artifact.rs  mod.rs  session.rs  signals.rs  tick.rs
src/lsp/: client.rs  mod.rs  parser.rs  pool.rs
src/mcp/: conductor_handlers.rs  docs_handlers.rs  intelligence_handlers.rs  lock_handlers.rs  loop_handlers.rs  mod.rs  protocol.rs  tools.rs
src/query/: mod.rs
src/report/: mod.rs
src/run_plan/: brief.rs  discover.rs  mod.rs  spawn.rs
src/security/: cwe.rs  findings.rs  mod.rs  policy.rs  sites.rs  verifier.rs
src/security/patterns/: command_injection.rs  deserialize.rs  format_string.rs  mod.rs  path_traversal.rs  secrets.rs
src/security/sites/: allocation.rs  buffer_copy.rs  division.rs  mod.rs  subtraction.rs
src/security/z3/: cwe190.rs  div_zero.rs  mod.rs  overflow.rs  underflow.rs
src/tui/: conductor.rs  detect.rs  keys.rs  layout.rs  mod.rs  pane.rs
tests/: extract_corpus.rs  extract_perf.rs
tests/fixtures/extract/: csharp_sample.cs  csharp_sample.json  go_sample.go  go_sample.json  python_nested.json  python_nested.py  rust_sample.json  rust_sample.rs  typescript_multiline.json  typescript_multiline.ts
tests/fixtures/simple_rust/: .gitignore  Cargo.toml
tests/integration/: indexer_test.rs  intelligence_test.rs  loop_test.rs
worked/loop-sdk/: README.md
worked/simple-rust/: CODEBEACON_REPORT.md  README.md  dep-graph.mmd
worked/simple-rust/src/: auth.rs  db.rs
