[package]
name = "lcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lcp"
path = "src/main.rs"

[lib]
name = "lcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
notify = "6"
bincode = "1"
clap = { version = "4", features = ["derive"] }
lsp-types = "0.95"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
which = "4"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
