[package]
name = "codebeacon"
version = "0.1.13"
edition = "2021"
description = "Hierarchical code index for AI coding assistants — LSP-backed, MCP-served"
license = "AGPL-3.0"
repository = "https://github.com/lelorinel/codebeacon"
homepage = "https://github.com/lelorinel/codebeacon"
keywords = ["mcp", "lsp", "ai", "code-index", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.npm]
name = "codebeacon"

[[bin]]
name = "codebeacon"
path = "src/main.rs"

[[test]]
name = "indexer_integration"
path = "tests/integration/indexer_test.rs"

[lib]
name = "codebeacon"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
notify = "6"
bincode = "1"
clap = { version = "4", features = ["derive"] }
lsp-types = "0.95"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
which = "4"
walkdir = "2"
ignore = "0.4"
toml = "0.8"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
